# bedrock-chat-bot

./: README.md  docker-compose.yaml
.github/workflows/: ci-build.yaml
backend/: .env.example  Dockerfile  app.py  pyproject.toml
backend/src/: utils.py
backend/src/features/: build_features.py
backend/src/models/: predict_model.py  train_model.py
client/apps/: mcp_playground.py
frontend/: Dockerfile  app.py  config.py
frontend/.streamlit/: config.toml
frontend/apps/: mcp_playground.py
frontend/services/: ai_service.py  chat_service.py
frontend/ui_components/: main_components.py  sidebar_components.py
frontend/utils/: ai_prompts.py  async_helpers.py  tool_schema_parser.py
servers/server2/: main.py
