[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "category-encoders>=2.8.1",
    "fastapi>=0.116.1",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "uvicorn>=0.35.0",
    "xgboost>=3.0.4",
]
